--- a/index.html
+++ b/index.html
@@ -159,111 +159,6 @@
                     download><button>Resume</button></a>
             </div>
         </section>
-        <!-- <section class="col1" id="sec1">
-            <div class="heading">
-                <h1>>&nbsp;
-                    <div><span class="typed-text"></span></div>
-                    <div>
-                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="pen" class="cursor"
-                            role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                            <path fill="currentColor"
-                                d="M497.9 74.16L437.8 14.06c-18.75-18.75-49.19-18.75-67.93 0l-56.53 56.55l127.1 128l56.56-56.55C516.7 123.3 516.7 92.91 497.9 74.16zM290.8 93.23l-259.7 259.7c-2.234 2.234-3.755 5.078-4.376 8.176l-26.34 131.7C-1.921 504 7.95 513.9 19.15 511.7l131.7-26.34c3.098-.6191 5.941-2.141 8.175-4.373l259.7-259.7L290.8 93.23z">
-                            </path>
-                        </svg>
-                    </div>
-                </h1>
-            </div><br>
-            <p>I have a M-tech degree in Geoinformatics and have experience in working with remotely sensed data i.e.,
-                satellite images across
-                traditional platforms like Erdas Imagine, ArcMap and Qgis as well on script based platforms like
-                MATLAB and python.</p><br>
-            <p>I am a budding web developer with basic knowledge in Html and CSS with the help of which I have developed
-                this portfolio.</p>
-            <svg class="blob-motion" id="visual" viewBox="0 0 900 900" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
-                <g transform="translate(451.59512194833115 457.90768912031524)">
-                    <path id="blob1"
-                        d="M225.2 -236C280.2 -170.2 305.1 -85.1 315.6 10.5C326.1 106.1 322.1 212.1 267.1 271.5C212.1 330.8 106.1 343.4 26.5 316.9C-53 290.4 -106.1 224.7 -169.7 165.4C-233.4 106.1 -307.7 53 -321.1 -13.4C-334.6 -79.9 -287.1 -159.8 -223.5 -225.6C-159.8 -291.5 -79.9 -343.2 2.6 -345.8C85.1 -348.4 170.2 -301.8 225.2 -236"
-                        fill="#bd544b">
-                    </path>
-                </g>
-                <g transform="translate(423.7573825415975 471.907454484449)" style="visibility: hidden">
-                    <path id="blob2"
-                        d="M176.9 -167.4C247.7 -106.1 336.4 -53 354.6 18.3C372.9 89.6 320.8 179.1 250 223.3C179.1 267.5 89.6 266.2 -8.2 274.5C-106.1 282.7 -212.1 300.5 -262.5 256.3C-312.8 212.1 -307.4 106.1 -303.3 4.1C-299.1 -97.8 -296.3 -195.6 -246 -257C-195.6 -318.3 -97.8 -343.1 -22.4 -320.8C53 -298.4 106.1 -228.7 176.9 -167.4"
-                        fill="#bd544b">
-                    </path>
-                </g>
-            </svg>
-            <p>Feel free to browse through my educational and career credentials.</p><br><br>
-            <p>Below is the list of software and languages I was able to learn and implement in projects I worked on.
-            </p><br>
-
-            <div class="skills">
-                <div>
-                    <div class="skill-name soft"><span>softwares</span></div>
-                    <div class="software">
-                        <div>
-                            <div><img src="softwares/arcmap.png"></div><span>esri arcmap</span>
-                        </div>
-                        <div>
-                            <div><img src="softwares/erdas.png"></div><span>erdas imagine</span>
-                        </div>
-                        <div>
-                            <div><img src="softwares/excel.png"></div><span>ms excel</span>
-                        </div>
-                        <div>
-                            <div><img src="softwares/word.png"></div><span>ms word</span>
-                        </div>
-                        <div>
-                            <div><img src="softwares/powerpoint.png"></div><span>ms powerpoint</span>
-                        </div>
-                        <div>
-                            <div><img src="softwares/vscode.png"></div><span>visual studio code</span>
-                        </div>
-                        <div>
-                            <div><img src="softwares/idrisi.jpg"></div><span>idrisi selva</span>
-                        </div>
-                        <div>
-                            <div><img src="softwares/fragstats.png"></div><span>fragstats</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div>
-                    <div class="skill-name lang"><span>languages</span></div>
-                    <div class="language">
-                        <div>
-                            <div><img src="languages/matlab.png"></div><span>matlab</span>
-                        </div>
-                        <div>
-                            <div><img src="languages/python.png"></div><span>python</span>
-                        </div>
-                        <div>
-                            <div><img src="languages/c++.png"></div><span>c++</span>
-                        </div>
-                        <div>
-                            <div><img src="languages/html.png"></div><span>html</span>
-                        </div>
-                        <div>
-                            <div><img src="languages/css.png"></div><span>css</span>
-                        </div>
-                    </div>
-                </div>
-
-            </div><br>
-            <br><br>
-            <div class="resume"><a href="waves/RESUME_SHIDHARTH_ROUTH.pdf" class="button"
-                    download><button>Resume</button></a></div>
-            <script>
-                const tween = KUTE.fromTo(
-                    '#blob1',
-                    { path: '#blob1' },
-                    { path: '#blob2' },
-                    { repeat: 999, duration: 3000, yoyo: true }
-                )
-                tween.start()
-            </script>
-        </section> -->
         <div class="spacer layer1">
         </div>
         <section class="col2" id="sec2">
@@ -536,3 +431,135 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--    j u n k     c o d e 
+    <section class="col1" id="sec1">
+    <div class="heading">
+        <h1>>&nbsp;
+            <div><span class="typed-text"></span></div>
+            <div>
+                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="pen" class="cursor"
+                    role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path fill="currentColor"
+                        d="M497.9 74.16L437.8 14.06c-18.75-18.75-49.19-18.75-67.93 0l-56.53 56.55l127.1 128l56.56-56.55C516.7 123.3 516.7 92.91 497.9 74.16zM290.8 93.23l-259.7 259.7c-2.234 2.234-3.755 5.078-4.376 8.176l-26.34 131.7C-1.921 504 7.95 513.9 19.15 511.7l131.7-26.34c3.098-.6191 5.941-2.141 8.175-4.373l259.7-259.7L290.8 93.23z">
+                    </path>
+                </svg>
+            </div>
+        </h1>
+    </div><br>
+    <p>I have a M-tech degree in Geoinformatics and have experience in working with remotely sensed data i.e.,
+        satellite images across
+        traditional platforms like Erdas Imagine, ArcMap and Qgis as well on script based platforms like
+        MATLAB and python.</p><br>
+    <p>I am a budding web developer with basic knowledge in Html and CSS with the help of which I have developed
+        this portfolio.</p>
+    <svg class="blob-motion" id="visual" viewBox="0 0 900 900" xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
+        <g transform="translate(451.59512194833115 457.90768912031524)">
+            <path id="blob1"
+                d="M225.2 -236C280.2 -170.2 305.1 -85.1 315.6 10.5C326.1 106.1 322.1 212.1 267.1 271.5C212.1 330.8 106.1 343.4 26.5 316.9C-53 290.4 -106.1 224.7 -169.7 165.4C-233.4 106.1 -307.7 53 -321.1 -13.4C-334.6 -79.9 -287.1 -159.8 -223.5 -225.6C-159.8 -291.5 -79.9 -343.2 2.6 -345.8C85.1 -348.4 170.2 -301.8 225.2 -236"
+                fill="#bd544b">
+            </path>
+        </g>
+        <g transform="translate(423.7573825415975 471.907454484449)" style="visibility: hidden">
+            <path id="blob2"
+                d="M176.9 -167.4C247.7 -106.1 336.4 -53 354.6 18.3C372.9 89.6 320.8 179.1 250 223.3C179.1 267.5 89.6 266.2 -8.2 274.5C-106.1 282.7 -212.1 300.5 -262.5 256.3C-312.8 212.1 -307.4 106.1 -303.3 4.1C-299.1 -97.8 -296.3 -195.6 -246 -257C-195.6 -318.3 -97.8 -343.1 -22.4 -320.8C53 -298.4 106.1 -228.7 176.9 -167.4"
+                fill="#bd544b">
+            </path>
+        </g>
+    </svg>
+    <p>Feel free to browse through my educational and career credentials.</p><br><br>
+    <p>Below is the list of software and languages I was able to learn and implement in projects I worked on.
+    </p><br>
+
+    <div class="skills">
+        <div>
+            <div class="skill-name soft"><span>softwares</span></div>
+            <div class="software">
+                <div>
+                    <div><img src="softwares/arcmap.png"></div><span>esri arcmap</span>
+                </div>
+                <div>
+                    <div><img src="softwares/erdas.png"></div><span>erdas imagine</span>
+                </div>
+                <div>
+                    <div><img src="softwares/excel.png"></div><span>ms excel</span>
+                </div>
+                <div>
+                    <div><img src="softwares/word.png"></div><span>ms word</span>
+                </div>
+                <div>
+                    <div><img src="softwares/powerpoint.png"></div><span>ms powerpoint</span>
+                </div>
+                <div>
+                    <div><img src="softwares/vscode.png"></div><span>visual studio code</span>
+                </div>
+                <div>
+                    <div><img src="softwares/idrisi.jpg"></div><span>idrisi selva</span>
+                </div>
+                <div>
+                    <div><img src="softwares/fragstats.png"></div><span>fragstats</span>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <div class="skill-name lang"><span>languages</span></div>
+            <div class="language">
+                <div>
+                    <div><img src="languages/matlab.png"></div><span>matlab</span>
+                </div>
+                <div>
+                    <div><img src="languages/python.png"></div><span>python</span>
+                </div>
+                <div>
+                    <div><img src="languages/c++.png"></div><span>c++</span>
+                </div>
+                <div>
+                    <div><img src="languages/html.png"></div><span>html</span>
+                </div>
+                <div>
+                    <div><img src="languages/css.png"></div><span>css</span>
+                </div>
+            </div>
+        </div>
+
+    </div><br>
+    <br><br>
+    <div class="resume"><a href="waves/RESUME_SHIDHARTH_ROUTH.pdf" class="button"
+            download><button>Resume</button></a></div>
+    <script>
+        const tween = KUTE.fromTo(
+            '#blob1',
+            { path: '#blob1' },
+            { path: '#blob2' },
+            { repeat: 999, duration: 3000, yoyo: true }
+        )
+        tween.start()
+    </script>
+</section> -->
