--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div><br>
             <div class="skills">
                 <div>
-                    <div class="skill-name soft"><span>softwares</span></div>
+                    <div class="skill-name soft"><span>software</span></div>
                     <div class="software">
                         <div>
                             <div><img src="softwares/arcmap.png"></div><span>esri arcmap</span>
