--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sidrouth</title>
 
     <!-- font region -->
@@ -24,10 +24,9 @@
 
 <body>
 
-    <nav class="navbar">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-
+    <div class="navbar">
+        <div class="containerNav">
+            <div class="block">
                 <a href="#sec1" class="nav-link">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="person"
                         class="svg-inline--fa fa-person" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -38,7 +37,8 @@
                     </svg>
                     <span class="link-text">know me</span>
                 </a>
-
+            </div>
+            <div class="block">
                 <a href="#sec2" class="nav-link">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="user-graduate"
                         class="svg-inline--fa fa-user-graduate" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -49,7 +49,8 @@
                     </svg>
                     <span class="link-text">education</span>
                 </a>
-
+            </div>
+            <div class="block">
                 <a href="#sec3" class="nav-link">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="layer-group"
                         class="svg-inline--fa fa-layer-group" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -60,7 +61,8 @@
                     </svg>
                     <span class="link-text">projects</span>
                 </a>
-
+            </div>
+            <div class="block">
                 <a href="#sec4" class="nav-link">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="feather-pointed"
                         class="svg-inline--fa fa-feather-pointed" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -71,7 +73,8 @@
                     </svg>
                     <span class="link-text">publications</span>
                 </a>
-
+            </div>
+            <div class="block">
                 <a href="#sec5" class="nav-link">
                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="paper-plane"
                         class="svg-inline--fa fa-paper-plane" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -82,10 +85,9 @@
                     </svg>
                     <span class="link-text">socials</span>
                 </a>
-
-            </li>
-        </ul>
-    </nav>
+            </div>
+        </div>
+    </div>
 
     <main>
         <section class="col1" id="sec1">
@@ -555,3 +557,17 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
