--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link
-        href="https://fonts.googleapis.com/css2?family=Carattere&family=Cinzel+Decorative&family=Cinzel:wght@600&family=Mate+SC&family=Poiret+One&family=Poppins:wght@500&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Carattere&family=Cinzel+Decorative&family=Cinzel:wght@600&family=Mate+SC&family=Cedarville+Cursive&family=Poiret+One&family=Poppins:wght@500&display=swap"
         rel="stylesheet">
 
     <!-- font region -->
@@ -104,6 +104,7 @@
                         this webpage.</p>
                 </div>
             </div><br>
+            <h3>Below is the list of platforms I have worked with on my projects.</h3><br>
             <div class="skills">
                 <div>
                     <div class="skill-name soft"><span>software</span></div>
@@ -156,7 +157,7 @@
                     </div>
                 </div>
 
-            </div><br><br><br>
+            </div><br>
             <div class="resume"><a href="waves/RESUME_SHIDHARTH_ROUTH.pdf" class="button"
                     download><button>Resume</button></a>
             </div>
@@ -350,11 +351,55 @@
         <div class="spacer layer3">
         </div>
         <section class="col4" id="sec4">
-            <h1>Will be updated soon !!</h1>
-            <p>Laboriosam dignissimos iste quis in. Quibusdam, ab soluta necessitatibus repellendus ducimus corrupti
-                laborum
-                nemo perferendis illo ex fugiat error, ipsa distinctio dolorem, iure dolore atque rerum ea? Vel, itaque?
-                Velit?</p>
+            <h1>Publications</h1><br>
+            <p> A List of publications I have contributed to.</p><br>
+            <div class="timeline">
+                <div class="paper-cont">
+                    <div class="paper">
+                        <p>Mitra, S. S., Kumar, A., Santra, A., & Routh, S. (2021). Comparative Evaluation of Predicted
+                            Hydrologic Response Under Two Extremities of Sustainability Using Transformed
+                            Landuse‐Landcover and CORDEX‐Based Climatic Scenarios. Climate Impacts on Sustainable
+                            Natural Resource Management, 183–218.<br> <a href="https://doi.org/10.1002/9781119793403.ch10">https://doi.org/10.1002/9781119793403.ch10</a></p>
+                    </div>
+                    <div class="year">publication year : 2021</div>
+                </div>
+                <div class="paper-cont">
+                    <div class="paper">
+                        <p>Mitra, S. S., Santra, A., Kumar, A., & Routh, S. (2021). Long-Term Drought Assessment and
+                            Prediction Driven by CORDEX-RCM. Mapping, Monitoring, and Modeling Land and Water
+                            Resources, 243–274.<br> <a href="https://doi.org/10.1201/9781003181293-17">https://doi.org/10.1201/9781003181293-17</a></p>
+                    </div>
+                    <div class="year">publication year : 2021</div>
+                </div>
+                <div class="paper-cont">
+                    <div class="paper">
+                        <p>Santra Mitra, S., Kumar, A., Santra, A., Mitra, D., & Routh, S. (2021). Hydrological modeling of
+                            catchment specific runoff-response to variable land-use/climatic conditions and
+                            trend-based hypothetical scenario generation: a study on a large river basin in Eastern
+                            India. Journal of the Indian Society of Remote Sensing, 49(8), 1895–1914.<br>
+                            <a href="https://doi.org/10.1007/s12524-021-01348-z">https://doi.org/10.1007/s12524-021-01348-z</a></p>
+                    </div>
+                    <div class="year">publication year : 2021</div>
+                </div>
+                <div class="paper-cont">
+                    <div class="paper">
+                        <p>Santra, A., Mitra, S. S., Sinha, S., Routh, S., & Kumar, A. (2020). Identification of Impervious
+                            Built-Up Surface Features Using ResourceSat-2 LISS-III-Based Novel Optical Built-Up
+                            Index. Remote Sensing and GIScience, 113–126.<br>
+                            <a href="https://doi.org/10.1007/978-3-030-55092-9_7">https://doi.org/10.1007/978-3-030-55092-9_7</a></p>
+                    </div>
+                    <div class="year">publication year : 2020</div>
+                </div>
+                <div class="paper-cont">
+                    <div class="paper">
+                        <p>Santra, A., Mitra, S. S., Sinha, S., & Routh, S. (2020). Performance testing of selected spectral
+                            indices in automated extraction of impervious built-up surface features using Resourcesat
+                            LISS-III image. Arabian Journal of Geosciences, 13(22).<br>
+                            <a href="https://doi.org/10.1007/s12517-020-06183-z">https://doi.org/10.1007/s12517-020-06183-z</a></p>
+                    </div>
+                    <div class="year">publication year : 2020</div>
+                </div>
+            </div>
         </section>
         <div class="spacer layer4">
         </div>
